fix: remove body 100vh on mobile size

--- a/css/global.css
+++ b/css/global.css
@@ -70,3 +70,9 @@ input[type='submit'] {
   cursor: pointer;
   outline: none;
 }
+
+@media screen and (max-width: 767px) {
+  body {
+    height: 100%;
+  }
+}
