--- a/css/home.css
+++ b/css/home.css
@@ -318,6 +318,8 @@
 
   .hero-image {
     height: 207px;
+    width: 100%;
+    object-fit: cover;
   }
 
   .hero-content .content-br {
